Fix layout bug

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -80,7 +80,6 @@ html {
 
 body {
   height: 100vh;
-  overflow: hidden;
   font: var(--font-size) Roboto, sans-serif;
 }
 
